InternexDev_Sandbox/src/objects/Applied_Monthly_Interest__c.object
<CustomObject>
    <fields>
        <fullName>Client_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Account</label>
        <referenceTo>Client_Account__c</referenceTo>
        <relationshipLabel>Applied Monthly Interests</relationshipLabel>
        <relationshipName>Applied_Monthly_Interests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commitment_fee_Accrued__c</fullName>
        <label>UL Fee Charged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Charged__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest Charged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Interest_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Monthly Interest Application</label>
        <referenceTo>Monthly_Interest_Application__c</referenceTo>
        <relationshipLabel>Applied Monthly Interests</relationshipLabel>
        <relationshipName>Applied_Monthly_Interests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_Fee_Charged__c</fullName>
        <defaultValue>0</defaultValue>
        <label>UL Fee Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Applied Monthly Interest</label>
    <nameField>
        <label>Applied Monthly Interest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applied Monthly Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>